Tweak project setup