@@ -55,9 +55,12 @@
                                      "does-not-exist.jar"]
                     :java-source-paths ["test-java"]
                     ;; Initialize the cache verbosely, as usual, so that possible issues can be more easily diagnosed:
-                    :jvm-opts ["-Dorchard.initialize-cache.silent=false"
-                               "-Dorchard.internal.test-suite-running=true"
-                               "-Dorchard.internal.has-enriched-classpath=false"]
+                    :jvm-opts
+                    ~(cond-> ["-Dorchard.initialize-cache.silent=false"
+                              "-Dorchard.internal.test-suite-running=true"
+                              "-Dorchard.internal.has-enriched-classpath=false"]
+                       (not jdk8?) (conj "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"))
+
                     :source-paths ["test" "src-spec-alpha-2/src/main/clojure"]}
 
              :mark-enriched-classpath {:jvm-opts ["-Dorchard.internal.has-enriched-classpath=true"]}
